# bloodpressure-monitor-bot

./: .gitignore  Dockerfile  Pipfile  README.md  bot.py  cli.py  docker-compose.yml  env.dist  gs_test.py  monitor.ipynb  pyproject.toml
bloodpressure_monitor_bot/bot/: commands.py  constants.py  conversation.py  errors.py  helpers.py
bloodpressure_monitor_bot/db/: cli.py  core.py
bloodpressure_monitor_bot/gapi/: cli.py  constants.py  helpers.py  services.py
credentials/: credentials.json
